--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="row">
       <div class="col-lg-12">
-        <div class="card-header">
+        <div class="card card-header">
           LISTA SEMANAL POR TRABAJADOR
         </div>
       </div>
@@ -51,7 +51,7 @@
     <!-- ==================================================== TABLE -->
 
     <div class="tableDiv">
-      <table class="table">
+      <table class="table ">
         <thead>
           <tr>
             <th class="id" scope="col">ID</th>
@@ -102,83 +102,82 @@
             <form>
 
               <div class="form-group row">
-                <label for="name">Obra</label>
-                <input class="form-control" id="name" type="text">
+                <label for="obra">Obra</label>
+                <input class="form-control" id="obra" type="text">
               </div>
               <div class="form-group row">
-                <label for="name">Contratista</label>
-                <input class="form-control" id="name" type="text">
+                <label for="contratista">Contratista</label>
+                <input class="form-control" id="contratista" type="text">
               </div>
               <div class="form-group row">
-                <label for="name">Nombre del trabajador</label>
-                <input class="form-control" id="name" type="text">
+                <label for="nombre">Nombre del trabajador</label>
+                <input class="form-control" id="nombre" type="text">
               </div>
               <div class="form-group row">
                 <label for="rango">Rango</label>
                 <input class="form-control" id="rango" type="text">
               </div>
               <div class="form-group row">
-                <label for="rango">Fecha (a sábados)</label>
-                <input class="form-control" id="rango" type="text">
+                <label for="sabado">Fecha (a sábados)</label>
+                <input class="form-control" id="sabado" type="date">
               </div>
               <div class="weekDaysContainer row">
                 <div class="days-col form-group ">
                   <span class="weekHours input-group-text ">Lun</span>
-                  <input type="number" aria-label="First name" class="weekHours form-control ">
-                  <span class="weekHours input-group-text ">Lun-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <input type="number" aria-label="First name" id="Lun" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">LunEx</span>
+                  <input type="number" aria-label="First name" id="Lun-e" class="weekHours form-control ">
                 </div>
                 <div class="days-col form-group ">
                   <span class="weekHours input-group-text ">Mar</span>
-                  <input type="number" aria-label="First name" class="weekHours form-control ">
-                  <span class="weekHours input-group-text ">Mar-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <input type="number" aria-label="First name" id="Mar" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">MarEx</span>
+                  <input type="number" aria-label="First name" id="Mar-e" class="weekHours form-control ">
                 </div>
                 <div class="days-col form-group ">
                   <span class="weekHours input-group-text ">Mie</span>
-                  <input type="number" aria-label="First name" class="weekHours form-control ">
-                  <span class="weekHours input-group-text ">Mie-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <input type="number" aria-label="First name" id="Mie" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">MieEx</span>
+                  <input type="number" aria-label="First name" id="Mie-e" class="weekHours form-control ">
                 </div>
                 <div class="days-col form-group ">
                   <span class="weekHours input-group-text ">Jue</span>
-                  <input type="number" aria-label="First name" class="weekHours form-control ">
-                  <span class="weekHours input-group-text ">Jue-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <input type="number" aria-label="First name" id="Jue" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">JueEx</span>
+                  <input type="number" aria-label="First name" id="Jue-e" class="weekHours form-control ">
                 </div>
                 <div class="days-col form-group ">
                   <span class="weekHours input-group-text ">Vie</span>
-                  <input type="number" aria-label="First name" class="weekHours form-control ">
-                  <span class="weekHours input-group-text ">Vie-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <input type="number" aria-label="First name" id="Vie" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">VieEx</span>
+                  <input type="number" aria-label="First name" id="Vie-e" class="weekHours form-control ">
                 </div>
                 <div class="days-col form-group ">
                   <span class="weekHours input-group-text ">Sab</span>
-                  <input type="number" aria-label="First name" class="weekHours form-control ">
-                  <span class="weekHours input-group-text ">Sab-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <input type="number" aria-label="First name" id="Sab" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">SabEx</span>
+                  <input type="number" aria-label="First name" id="Sab-e" class="weekHours form-control ">
                 </div>
                 <div class="days-col domingo form-group ">
-                  <span class="weekHours input-group-text ">Dom-e</span>
-                  <input type="number" aria-label="Last name" class="weekHours form-control ">
+                  <span class="weekHours input-group-text ">DomEx</span>
+                  <input type="number" aria-label="First name" id="Dom-e" class="weekHours form-control ">
                 </div>
               </div>
-
               <div class="form-group row">
                 <label for="raya">Raya semanal ($)</label>
                 <input class="form-control" id="raya" type="number">
               </div>
               <div class="form-group row">
-                <label for="raya">Descuentos ($)</label>
-                <input class="form-control" id="raya" type="number">
+                <label for="descuentos">Descuentos ($)</label>
+                <input class="form-control" id="descuentos" type="number">
               </div>
               <div class="form-group row">
-                <label for="raya">Forma de pago</label>
-                <input class="form-control" id="raya" type="text">
+                <label for="formaPago">Forma de pago</label>
+                <input class="form-control" id="formaPago" type="text">
               </div>
               <div class="form-group row">
-                <label for="raya">Observaciones</label>
-                <textarea id="my-input" class="form-control" rows="2"></textarea>
+                <label for="observaciones">Observaciones</label>
+                <textarea id="observaciones" class="form-control" rows="2"></textarea>
               </div>
               <button class="btn btn-primary btn-dark" id="submit-bid" type="submit">Agregar</button>
             </form>
