--- a/index.html
+++ b/index.html
@@ -110,8 +110,13 @@
                 <input class="form-control" id="contratista" type="text">
               </div>
               <div class="form-group row">
+                <!-- <label for="nombre">Nombre del trabajador</label>
+                <input class="form-control" id="nombre" type="text"> -->
                 <label for="nombre">Nombre del trabajador</label>
-                <input class="form-control" id="nombre" type="text">
+                <select class="form-control selectpicker" id="nombre">
+                  <option></option>
+                  
+                </select>
               </div>
               <div class="form-group row">
                 <label for="rango">Rango</label>
