--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Trabajadores</title>
+  <title>ListaRayas</title>
 
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -35,7 +35,7 @@
 
 
     <div class="jumbotron jumbotron-fluid bg-dark text-light">
-      <h3 class="text-center">REGISTRO DE TRABAJADORES</h3>
+      <h3 class="text-center">REGISTRO DE LISTA DE ASISTENCIA</h3>
       <!-- <h3 class="text-center"></h3> -->
     </div>
 
