--- a/listaTrabajadores.html
+++ b/listaTrabajadores.html
@@ -65,7 +65,7 @@
       <div class="row">
           <div class="col-lg-12">
             <div class="card card-header">
-              INFORMACIÓN DE TRABAJAODR
+              INFORMACIÓN DE TRABAJADOR
             </div>
           </div>
         </div>
