--- a/index.html
+++ b/index.html
@@ -40,6 +40,26 @@
 
 <body>
 
+  <!-- ==================================================== MODAL -->
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h6 class="modal-title" id="exampleModalLabel">SE BORRARÁ ESTE REGISTRO</h6>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <button type="button" id="goErase" class="btn btn-primary" data-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <!-- ==================================================== HEADER -->
 
   <div class="jumbotron jumbotron-fluid bg-dark text-light">
@@ -104,6 +124,7 @@
             <th scope="col">IMPORTE TOTAL</th>
             <th scope="col">FORMA DE PAGO</th>
             <th scope="col">OBSERVACIONES</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
