--- a/listaTrabajadores.html
+++ b/listaTrabajadores.html
@@ -41,6 +41,26 @@
 
 <body>
 
+  <!-- ==================================================== MODAL -->
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h6 class="modal-title" id="exampleModalLabel">SE BORRARÁ ESTE REGISTRO</h6>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <button type="button" id="goErase" class="btn btn-primary" data-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
   <!-- ==================================================== HEADER -->
 
   <div class="jumbotron jumbotron-fluid bg-dark text-light">
@@ -50,7 +70,7 @@
   <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
-          <a href="index.html">AÑADIR LISTA DE RAYA</a>
+        <a href="index.html">AÑADIR LISTA DE RAYA</a>
       </div>
     </div>
     <nav class="navbar navbar-dark bg-dark">
@@ -62,13 +82,13 @@
   </div>
 
   <div class="container">
-      <div class="row">
-          <div class="col-lg-12">
-            <div class="card card-header">
-              INFORMACIÓN DE TRABAJADOR
-            </div>
-          </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card card-header">
+          INFORMACIÓN DE TRABAJADOR
         </div>
+      </div>
+    </div>
 
 
     <!-- ==================================================== TABLE -->
@@ -81,10 +101,11 @@
             <th scope="col">NOMBRE</th>
             <th scope="col">RANGO</th>
             <th scope="col">RAYA SEMANAL</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
-       
+
         </tbody>
       </table>
     </div>
