--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div class="form-group row">
                 <label for="nombre">Nombre del trabajador</label>
                 <select class="form-control selectpicker" id="nombre">
-                  <option></option>
+                  <option selected disabled>Seleccionar</option>
                 </select>
               </div>
               <div class="form-group row">
