--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
   <!-- ==================================================== HEADER -->
 
   <div class="jumbotron jumbotron-fluid bg-dark text-light">
-    <h3 class="text-center">REGISTRO DE LISTA DE ASISTENCIA</h3>
+    <h3 id="mainHeader" class="text-center">REGISTRO DE LISTA DE ASISTENCIA</h3>
   </div>
 
-  <div class="pos-f-t">
+  <div id="generalNavbar" class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
         <a href="listaTrabajadores.html">AÑADIR TRABAJADORES</a>
@@ -84,58 +84,57 @@
   </div>
 
   <div class="container">
-    <div class="row">
+
+    <!-- ==================================================== TABLE -->
+
+    <div id="tableRow" class="row">
       <div class="col-lg-12">
-        <div class="card card-header">
-          LISTA SEMANAL POR TRABAJADOR
-        </div>
-
-
-
-        <!-- ==================================================== TABLE -->
-
-        <div class="tableDiv">
-          <table class="table ">
-            <thead>
-              <tr>
-                <th class="id" scope="col"></th>
-                <th scope="col">OBRA</th>
-                <th scope="col">CONTRATISTA</th>
-                <th scope="col">NOMBRE</th>
-                <th scope="col">RANGO</th>
-                <th scope="col">FECHA (A SÁBADOS)</th>
-                <th scope="col">LUN</th>
-                <th scope="col">LU-E</th>
-                <th scope="col">MAR</th>
-                <th scope="col">MA-E</th>
-                <th scope="col">MIE</th>
-                <th scope="col">MI-E</th>
-                <th scope="col">JUE</th>
-                <th scope="col">JU-E</th>
-                <th scope="col">VIE</th>
-                <th scope="col">VI-E</th>
-                <th scope="col">SAB</th>
-                <th scope="col">SA-E</th>
-                <th scope="col">DO-E</th>
-                <th scope="col">TOTAL HRS</th>
-                <th scope="col">TOTAL HRS EX</th>
-                <th scope="col">RAYA SEMANAL</th>
-                <th scope="col">IMPORTE BASE</th>
-                <th scope="col">IMPORTE EXTRA</th>
-                <th scope="col">DESCUENTOS</th>
-                <th scope="col">IMPORTE TOTAL</th>
-                <th scope="col">FORMA DE PAGO</th>
-                <th scope="col">OBSERVACIONES</th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
+        <div class="card card-default">
+          <div class="card-header">
+            LISTA SEMANAL POR TRABAJADOR
+          </div>
+          <div class="card-body tableDiv">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th class="id" scope="col"></th>
+                  <th scope="col">OBRA</th>
+                  <th scope="col">CONTRATISTA</th>
+                  <th scope="col">NOMBRE</th>
+                  <th scope="col">RANGO</th>
+                  <th scope="col">FECHA (A SÁBADOS)</th>
+                  <th scope="col">LUN</th>
+                  <th scope="col">LU-E</th>
+                  <th scope="col">MAR</th>
+                  <th scope="col">MA-E</th>
+                  <th scope="col">MIE</th>
+                  <th scope="col">MI-E</th>
+                  <th scope="col">JUE</th>
+                  <th scope="col">JU-E</th>
+                  <th scope="col">VIE</th>
+                  <th scope="col">VI-E</th>
+                  <th scope="col">SAB</th>
+                  <th scope="col">SA-E</th>
+                  <th scope="col">DO-E</th>
+                  <th scope="col">TOTAL HRS</th>
+                  <th scope="col">TOTAL HRS EX</th>
+                  <th scope="col">RAYA SEMANAL</th>
+                  <th scope="col">IMPORTE BASE</th>
+                  <th scope="col">IMPORTE EXTRA</th>
+                  <th scope="col">DESCUENTOS</th>
+                  <th scope="col">IMPORTE TOTAL</th>
+                  <th scope="col">FORMA DE PAGO</th>
+                  <th scope="col">OBSERVACIONES</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
-
 
     <!-- ==================================================== INPUT FORM -->
 
