--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </script>
 
   <!-- Metatag to start setting resposiveness -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- link to CSS. -->
   <link rel="stylesheet" href="assets/css/index.css">
   <!-- Firebase Reference -->
@@ -125,7 +125,6 @@
                   <th scope="col">IMPORTE TOTAL</th>
                   <th scope="col">FORMA DE PAGO</th>
                   <th scope="col">OBSERVACIONES</th>
-                  <th scope="col"></th>
                 </tr>
               </thead>
               <tbody>
