--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </script>
 
   <!-- Metatag to start setting resposiveness -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <!-- link to CSS. -->
   <link rel="stylesheet" href="assets/css/index.css">
   <!-- Firebase Reference -->
