--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@
                 <label for="contratista">Contratista</label>
                 <input class="form-control" id="contratista" type="text">
               </div>
-              <div class="form-group row">
+              <div id="listaTrabajadores" class="form-group row">
                 <label for="nombre">Nombre del trabajador</label>
                 <select class="form-control selectpicker" id="nombre">
                   <option selected disabled>Seleccionar</option>
+                  <option idRef="limpiarSeleccion">Limpiar Selección</option>
                 </select>
               </div>
               <div class="form-group row">
@@ -225,8 +226,7 @@
               <div class="form-group row">
                 <label for="formaPago">Forma de pago</label>
                 <select class="form-control selectpicker" id="formaPago">
-                  <option selected disabled>Seleccionar</option>
-                  <option>EFECTIVO</option>
+                  <option selected >EFECTIVO</option>
                   <option>TARJETA</option>
                 </select>
               </div>
