Filtering fiexed in table.

--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
                 <tr>
                   <th class="id" scope="col"></th>
                   <th id="obra" scope="col">
+                    <p id="obraHeader" class="headerSelector">OBRA</p>
                     <select id="obraSelector" class="form-control">
-                      <option title="TODAS LAS OBRAS">OBRA</option>
+                      <option selected disabled></option>
+                      <option title="TODAS LAS OBRAS">TODAS</option>
                       <option title="CAMARGO 2">CAMARGO 26</option>
                       <option title="CONCEPCION BEISTEGUI">CONCEPCION BEISTEGUI</option>
                       <option title="LERDO 42">LERDO 42</option>
@@ -109,8 +111,10 @@
                     </select>
                   </th>
                   <th id="contratista" scope="col">
+                    <p id="contratistaHeader" class="headerSelector">CONTRATISTA</p>
                     <select id="constratistaSelector" class="form-control">
-                      <option title="TODOS LOS CONTRATISTAS">CONTRATISTA</option>
+                      <option selected disabled></option>
+                      <option title="TODOS LOS CONTRATISTAS">TODOS</option>
                       <option title="FERNADO REYES">FERNADO REYES</option>
                       <option title="JOSÉ SANDOVAL">JOSÉ SANDOVAL</option>
                       <option title="MANUEL NAVARRO">MANUEL NAVARRO</option>
@@ -119,7 +123,35 @@
                     </select>
                   </th>
                   <th scope="col">NOMBRE</th>
-                  <th scope="col">RANGO</th>
+                  <th id="rango" scope="col">
+                    <p id="rangoHeader" class="headerSelector">RANGO</p>
+                    <select id="rangoSelector" class="form-control">
+                      <option selected disabled></option>
+                      <option title="TODOS LOS RANGOS">TODOS</option>
+                      <option title="AYUDANTE ALBAÑIL">AYUDANTE ALBAÑIL</option>
+                      <option title="AYUDANTE ALUMINIERO">AYUDANTE ALUMINIERO</option>
+                      <option title="AYUDANTE CARPINTERO ON">AYUDANTE CARPINTERO ON</option>
+                      <option title="AYUDANTE CARPINTERO OB">AYUDANTE CARPINTERO OB</option>
+                      <option title="AYUDANTE DE INSTALACIONES">AYUDANTE DE INSTALACIONES</option>
+                      <option title="AYUDANTE FIERRERO">AYUDANTE FIERRERO</option>
+                      <option title="AYUDANTE HERRERO">AYUDANTE HERRERO</option>
+                      <option title="AYUDANTE JARDINERO">AYUDANTE JARDINERO</option>
+                      <option title="INTENDENCIA">INTENDENCIA</option>
+                      <option title="MAESTRERO">MAESTRERO</option>
+                      <option title="OFICIAL ALBAÑIL">OFICIAL ALBAÑIL</option>
+                      <option title="OFICIAL ALUMINIERO">OFICIAL ALUMINIERO</option>
+                      <option title="OFICIAL CARPINTERO ON">OFICIAL CARPINTERO ON</option>
+                      <option title="OFICIAL CARPINTERO OB">OFICIAL CARPINTERO OB</option>
+                      <option title="OFICIAL ELECTRICISTA">OFICIAL ELECTRICISTA</option>
+                      <option title="OFICIAL FIERRERO">OFICIAL FIERRERO</option>
+                      <option title="OFICIAL HERRERO">OFICIAL HERRERO</option>
+                      <option title="OFICIAL JARDINERO">OFICIAL JARDINERO</option>
+                      <option title="OFICIAL PLOMERO">OFICIAL PLOMERO</option>
+                      <option title="SEGUNDERO">SEGUNDERO</option>
+                      <option title="SEGURIDAD INDUSTRIAL">SEGURIDAD INDUSTRIAL</option>
+                      <option title="VELADOR BODEGUERO">VELADOR BODEGUERO</option>
+                    </select>
+                  </th>
                   <th scope="col">FECHA (A SÁBADOS)</th>
                   <th scope="col">LUN</th>
                   <th scope="col">LU-E</th>
