Adding all 'Obras' to 'Obra list input' in 'Input' section.

--- a/index.html
+++ b/index.html
@@ -204,9 +204,12 @@
                 <select class="form-control selectpicker" id="obraList">
                   <option selected disabled>Seleccionar</option>
                   <option idRef="limpiarSeleccion">Limpiar Selección</option>
+                  <option idRef="">ALONSO CANO</option>
+                  <option idRef="">CALLE 9</option>
                   <option idRef="">CAMARGO 26</option>
                   <option idRef="">CONCEPCION BEISTEGUI</option>
                   <option idRef="">LERDO 42</option>
+                  <option idRef="">OXFORD 23</option>
                   <option idRef="">OXFORD 35</option>
                   <option idRef="">SINALOA 49</option>
                 </select>
